--- a/knitr-howtos/first-howto-finished.Rmd
+++ b/knitr-howtos/first-howto-finished.Rmd
@@ -59,5 +59,5 @@ $$
 ### To compile me, use
 ```{r compile, eval=FALSE}
 library(knitr)
-knit('knitr-how-tos/first-howto-finished.Rmd')
+knit('first-howto-finished.Rmd')
 ```
