--- a/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise1.Rmd
+++ b/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise1.Rmd
@@ -54,7 +54,7 @@ A <- matrix(
 b <- c(-3, 5, -3, 3)
 ```
 
-### Code the equation in R matlib (commented out):
+### Code the equation in R matlib:
 
 ```
 Eqn(
