--- a/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise4.Rmd
+++ b/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise4.Rmd
@@ -1,23 +1,99 @@
-# Eample 4
+---
+documentclass: article
+papersize: a4
+fontsize: 10pt
+links-as-notes: true
+title: "LA1 - Version 2 - Exercise 4"
+author: "Ondrej Salamon"
+header-includes: |
+   ```{=latex}
+   \usepackage[margin=0.75in]{geometry}
+   \usepackage{fancyhdr}
+   \let\proof\relax
+   \let\endproof\relax
+   \usepackage{amsmath}
+   \pagestyle{fancy}
+   \fancyhead{}
+   \fancyfoot{}
+   \lhead{LA1 Project}
+   \rhead{Exercise 4 (Version 2)}
+   \lfoot{January, 2025}\rfoot{Pg. \thepage}
+   ```
+output:
+  pdf_document:
+    keep_tex: yes
+    latex_engine: xelatex
+---
+```{r initial setup}
+# initial setup
+options(scipen = 999)
+options(tinytex.verbose = TRUE)
+library(matlib)
+library(knitr)
+library(rmarkdown)
+library(quarto)
+library(tinytex)
+library(pandoc)
+knitr::opts_chunk$set(echo=TRUE, message=FALSE, warning=FALSE, fig.width=6, fig.height=6)
+```
 
+### Linear equations
+
+```{r equationsmatrix}
 A4 <- matrix(
         c( 1,-1,-2,
            0, 1, 3), 2, 3, byrow=TRUE)
 
-colnames(A4) <- paste0('x', 1:3)
+colnames(A4) <- paste0('x', 1:3) # add x1-x3 to columns
 
 b4 <- c(1, -2)
-
-Solve(A4, b4)
-
-```r
-# Result
-x1     + x3  =  -1 
-  x2 + 3*x3  =  -2 
 ```
 
-(-1-t) * c(1,1,0) + (5+2t) * c(0,1,1) + t* c(1,0,1) =
+### Equation solution
 
-(-1-t) * c(1,1,0) =
+```{r eqsol}
+Solve(A4, b4)
+```
 
-=
+### Code the exercise results in R matlib
+
+```
+Eqn(
+    "\\mathbf{x} = ",
+    "(-1-t) * ",
+    latexMatrix(matrix(c(-2,1,2), nrow=3, ncol=1)),
+    "(5+2t) * ",
+    latexMatrix(matrix(c(-2,0,1), nrow=3, ncol=1)),
+    "t * ",
+    latexMatrix(matrix(c(-1,1,1), nrow=3, ncol=1)),
+    Eqn_hspace(mid='='), 
+    latexMatrix(matrix(c("6-5t", "-1", "-2+t"), nrow = 3, ncol = 1))
+)
+```
+
+### Show exercise solution (R's Latex output)
+
+```{=latex}
+\begin{equation*}
+\mathbf{x} = (-1-t) * \begin{pmatrix} 
+-2 \\ 
+ 1 \\ 
+ 2 \\ 
+\end{pmatrix}
+(5+2t) * \begin{pmatrix} 
+-2 \\ 
+ 0 \\ 
+ 1 \\ 
+\end{pmatrix}
+t * \begin{pmatrix} 
+-1 \\ 
+ 1 \\ 
+ 1 \\ 
+\end{pmatrix}
+\quad=\quad\begin{pmatrix} 
+6-5t \\ 
+-1   \\ 
+-2+t \\ 
+\end{pmatrix}
+\end{equation*}
+```
