--- a/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise3.tex
+++ b/PROJECT-Assignment-My_solutions/VAM_komb24-LA_VER2_Exercises-checked_by_R/exercise3.tex
@@ -104,7 +104,7 @@
 \fancyhead{}
 \fancyfoot{}
 \lhead{LA1 Project}
-\rhead{Exercise 1 (Version 2)}
+\rhead{Exercise 3 (Version 2)}
 \lfoot{January, 2025}\rfoot{Pg. \thepage}
 
 \ifLuaTeX
@@ -116,12 +116,12 @@
 % Make links footnotes instead of hotlinks:
 \DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
 \hypersetup{
-  pdftitle={LA1 - Version 2 - Exercise 1},
+  pdftitle={LA1 - Version 2 - Exercise 3},
   pdfauthor={Ondrej Salamon},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{LA1 - Version 2 - Exercise 1}
+\title{LA1 - Version 2 - Exercise 3}
 \author{Ondrej Salamon}
 \date{}
 
@@ -143,26 +143,18 @@
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{find-all-solution-of-systems-of-linear-equations-of-the-form-axb-where}{%
-\subsection{\texorpdfstring{Find all solution of systems of linear
-equations of the form \textbf{Ax=b},
-where:}{Find all solution of systems of linear equations of the form Ax=b, where:}}\label{find-all-solution-of-systems-of-linear-equations-of-the-form-axb-where}}
+\hypertarget{system-of-linear-equations-of-the-form-axb-where}{%
+\subsection{\texorpdfstring{System of linear equations of the form
+\textbf{Ax=b},
+where:}{System of linear equations of the form Ax=b, where:}}\label{system-of-linear-equations-of-the-form-axb-where}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\CommentTok{\# enter variable (matrix) A in R matlib pkg}
 \NormalTok{A }\OtherTok{\textless{}{-}} \FunctionTok{matrix}\NormalTok{(}
-        \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{2}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{0}\NormalTok{,  }\DecValTok{2}\NormalTok{,}
-           \DecValTok{3}\NormalTok{,}\SpecialCharTok{{-}}\DecValTok{2}\NormalTok{, }\DecValTok{0}\NormalTok{, }\SpecialCharTok{{-}}\DecValTok{5}\NormalTok{,}
-          \SpecialCharTok{{-}}\DecValTok{2}\NormalTok{, }\DecValTok{3}\NormalTok{, }\DecValTok{2}\NormalTok{, }\DecValTok{12}\NormalTok{,}
-           \DecValTok{2}\NormalTok{,}\SpecialCharTok{{-}}\DecValTok{2}\NormalTok{,}\SpecialCharTok{{-}}\DecValTok{1}\NormalTok{, }\SpecialCharTok{{-}}\DecValTok{7}\NormalTok{), }\DecValTok{4}\NormalTok{, }\DecValTok{4}\NormalTok{, }\AttributeTok{byrow=}\ConstantTok{TRUE}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
+        \FunctionTok{c}\NormalTok{( }\DecValTok{1}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{2}\NormalTok{,}
+           \DecValTok{1}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{0}\NormalTok{ ), }\DecValTok{2}\NormalTok{, }\DecValTok{3}\NormalTok{, }\AttributeTok{byrow=}\ConstantTok{TRUE}\NormalTok{)}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{\# enter variable with right hand side vertical vector}
-\NormalTok{b }\OtherTok{\textless{}{-}} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{3}\NormalTok{, }\DecValTok{5}\NormalTok{, }\SpecialCharTok{{-}}\DecValTok{3}\NormalTok{, }\DecValTok{3}\NormalTok{)}
+\NormalTok{b }\OtherTok{\textless{}{-}} \FunctionTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -171,42 +163,22 @@ where:}{Find all solution of systems of linear equations of the form Ax=b, where
 matlib:}\label{code-the-equation-in-r-matlib}}
 
 \begin{verbatim}
-Eqn(
-    "\\mathbf{A} =",
-     latexMatrix(A, matrix="bmatrix"),
-     latexMatrix("x", nrow = 4, ncol=1),
-     Eqn_hspace(mid='='), 
-     latexMatrix(matrix(b, ncol = 1))
-)
+showEqn(A, b, fractions = TRUE, latex = TRUE)
 \end{verbatim}
 
 \hypertarget{show-equation-rs-latex-output}{%
 \subsubsection{Show equation (R's Latex
 output):}\label{show-equation-rs-latex-output}}
 
-\begin{equation*}
-\mathbf{A} =\begin{bmatrix} 
--2 &  1 &  0 &  2 \\ 
- 3 & -2 &  0 & -5 \\ 
--2 &  3 &  2 & 12 \\ 
- 2 & -2 & -1 & -7 \\ 
-\end{bmatrix}
-\begin{pmatrix} 
-  x_{1} \\ 
-  x_{2} \\ 
-  x_{3} \\ 
-  x_{4} \\ 
-\end{pmatrix}
-\quad=\quad\begin{pmatrix} 
--3 \\ 
- 5 \\ 
--3 \\ 
- 3 \\ 
-\end{pmatrix}
-\end{equation*}
+\[
+\begin{array}{lllllll}
+1 \cdot x_1 &+& 1 \cdot x_2 &+& 2 \cdot x_3  &=&  0 \\ 
+1 \cdot x_1 &+& 1 \cdot x_2 &+& 0 \cdot x_3  &=&  1 \\ 
+\end{array}
+\]
 
-\hypertarget{code-equation-solving}{%
-\subsubsection{Code equation solving:}\label{code-equation-solving}}
+\hypertarget{code-equation-solution}{%
+\subsubsection{Code equation solution:}\label{code-equation-solution}}
 
 \begin{verbatim}
 Solve(A, b, fractions = TRUE)
@@ -217,21 +189,16 @@ Solve(A, b, fractions = TRUE)
 plain):}\label{show-the-final-result-of-the-equation-not-latex-plain}}
 
 \begin{verbatim}
-x1       + x4  =   1 
-  x2   + 4*x4  =  -1 
-    x3   + x4  =   1 
-            0  =   0 
+x1 + x2    =     1 
+       x3  =  -0.5 
 \end{verbatim}
 
-\hypertarget{show-whole-verbose-solution-ie.-each-row-operation-created-by-command-solve}{%
-\subsubsection{\texorpdfstring{Show whole verbose solution, ie. each row
-operation, created by command
-\texttt{Solve}:}{Show whole verbose solution, ie. each row operation, created by command Solve:}}\label{show-whole-verbose-solution-ie.-each-row-operation-created-by-command-solve}}
+\hypertarget{show-whole-step-by-step-verbose-solution}{%
+\subsubsection{Show whole step by step verbose
+solution:}\label{show-whole-step-by-step-verbose-solution}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\CommentTok{\# thx to \textasciigrave{}verbose = TRUE\textasciigrave{} it outputs solution step by}
-\CommentTok{\# step with Gaussian elementary row operations}
 \FunctionTok{Solve}\NormalTok{(A, b, }\AttributeTok{verbose =} \ConstantTok{TRUE}\NormalTok{, }\AttributeTok{fractions =} \ConstantTok{TRUE}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -242,163 +209,39 @@ operation, created by command
 \end{verbatim}
 
 \begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,] -2    1    0    2   -3  
-## [2,]  3   -2    0   -5    5  
-## [3,] -2    3    2   12   -3  
-## [4,]  2   -2   -1   -7    3  
+##      [,1] [,2] [,3] [,4]
+## [1,] 1    1    2    0   
+## [2,] 1    1    0    1   
 ## 
 ## row: 1 
 ## 
-##  exchange rows 1 and 2
+##  subtract row 1 from row 2
 \end{verbatim}
 
 \begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]  3   -2    0   -5    5  
-## [2,] -2    1    0    2   -3  
-## [3,] -2    3    2   12   -3  
-## [4,]  2   -2   -1   -7    3  
-## 
-##  multiply row 1 by 1/3
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1 -2/3    0 -5/3  5/3
-## [2,]   -2    1    0    2   -3
-## [3,]   -2    3    2   12   -3
-## [4,]    2   -2   -1   -7    3
-## 
-##  multiply row 1 by 2 and add to row 2
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1 -2/3    0 -5/3  5/3
-## [2,]    0 -1/3    0 -4/3  1/3
-## [3,]   -2    3    2   12   -3
-## [4,]    2   -2   -1   -7    3
-## 
-##  multiply row 1 by 2 and add to row 3
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1 -2/3    0 -5/3  5/3
-## [2,]    0 -1/3    0 -4/3  1/3
-## [3,]    0  5/3    2 26/3  1/3
-## [4,]    2   -2   -1   -7    3
-## 
-##  multiply row 1 by 2 and subtract from row 4
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1]  [,2]  [,3]  [,4]  [,5] 
-## [1,]     1  -2/3     0  -5/3   5/3
-## [2,]     0  -1/3     0  -4/3   1/3
-## [3,]     0   5/3     2  26/3   1/3
-## [4,]     0  -2/3    -1 -11/3  -1/3
+##      [,1] [,2] [,3] [,4]
+## [1,]  1    1    2    0  
+## [2,]  0    0   -2    1  
 ## 
 ## row: 2 
 ## 
-##  exchange rows 2 and 3
+##  multiply row 2 by -1/2
 \end{verbatim}
 
 \begin{verbatim}
-##      [,1]  [,2]  [,3]  [,4]  [,5] 
-## [1,]     1  -2/3     0  -5/3   5/3
-## [2,]     0   5/3     2  26/3   1/3
-## [3,]     0  -1/3     0  -4/3   1/3
-## [4,]     0  -2/3    -1 -11/3  -1/3
+##      [,1] [,2] [,3] [,4]
+## [1,]    1    1    2    0
+## [2,]    0    0    1 -1/2
 ## 
-##  multiply row 2 by 3/5
+##  multiply row 2 by 2 and subtract from row 1
 \end{verbatim}
 
 \begin{verbatim}
-##      [,1]  [,2]  [,3]  [,4]  [,5] 
-## [1,]     1  -2/3     0  -5/3   5/3
-## [2,]     0     1   6/5  26/5   1/5
-## [3,]     0  -1/3     0  -4/3   1/3
-## [4,]     0  -2/3    -1 -11/3  -1/3
-## 
-##  multiply row 2 by 2/3 and add to row 1
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1]  [,2]  [,3]  [,4]  [,5] 
-## [1,]     1     0   4/5   9/5   9/5
-## [2,]     0     1   6/5  26/5   1/5
-## [3,]     0  -1/3     0  -4/3   1/3
-## [4,]     0  -2/3    -1 -11/3  -1/3
-## 
-##  multiply row 2 by 1/3 and add to row 3
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1]  [,2]  [,3]  [,4]  [,5] 
-## [1,]     1     0   4/5   9/5   9/5
-## [2,]     0     1   6/5  26/5   1/5
-## [3,]     0     0   2/5   2/5   2/5
-## [4,]     0  -2/3    -1 -11/3  -1/3
-## 
-##  multiply row 2 by 2/3 and add to row 4
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1    0  4/5  9/5  9/5
-## [2,]    0    1  6/5 26/5  1/5
-## [3,]    0    0  2/5  2/5  2/5
-## [4,]    0    0 -1/5 -1/5 -1/5
-## 
-## row: 3 
-## 
-##  multiply row 3 by 5/2
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1    0  4/5  9/5  9/5
-## [2,]    0    1  6/5 26/5  1/5
-## [3,]    0    0    1    1    1
-## [4,]    0    0 -1/5 -1/5 -1/5
-## 
-##  multiply row 3 by 4/5 and subtract from row 1
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1    0    0    1    1
-## [2,]    0    1  6/5 26/5  1/5
-## [3,]    0    0    1    1    1
-## [4,]    0    0 -1/5 -1/5 -1/5
-## 
-##  multiply row 3 by 6/5 and subtract from row 2
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]    1    0    0    1    1
-## [2,]    0    1    0    4   -1
-## [3,]    0    0    1    1    1
-## [4,]    0    0 -1/5 -1/5 -1/5
-## 
-##  multiply row 3 by 1/5 and add to row 4
-\end{verbatim}
-
-\begin{verbatim}
-##      [,1] [,2] [,3] [,4] [,5]
-## [1,]  1    0    0    1    1  
-## [2,]  0    1    0    4   -1  
-## [3,]  0    0    1    1    1  
-## [4,]  0    0    0    0    0  
-## 
-## row: 4 
-## x1       + x4  =   1 
-##   x2   + 4*x4  =  -1 
-##     x3   + x4  =   1 
-##             0  =   0
+##      [,1] [,2] [,3] [,4]
+## [1,]    1    1    0    1
+## [2,]    0    0    1 -1/2
+## x1 + x2    =     1 
+##        x3  =  -1/2
 \end{verbatim}
 
 \end{document}
