--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,12 @@
-# Linear Algebra 1 - Homework project / exercises
-## Ondrej Salamon / SAL0110, ondrej.salamon@vsb.cz, Jan 31 2025                  
+---
+title: "Linear Algebra 1 - Homework project / exercises"
+author: "Ondrej Salamon / SAL0110, ondrej.salamon@vsb.cz"
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    theme: sandstone
+    highlight: tango
+---
 
 #### [My final solution in PDF for most of the assigned examples.](/abbandonate-ogni-speranza-voi-che-entrate-nell-algebra-lineare/PROJECT-Assignment-My_solutions/VAM_komb25-LA1_Ver2-my_final_solutions.pdf) Just FYI, I was supposed to develop exercises **version 2**.
 
